--- a/skills/index.html
+++ b/skills/index.html
@@ -48,7 +48,7 @@
       <a href="woodwork"><h3><center>WOODWORK</h3>
       </a></div><br>
   <hr><h1>Field Experience</h1><hr>
-<div class="essocell">
+<div class="fieldworkcell" style="background-image: url(http://www.joel-butler.com/images/essoioco.jpg)">
   <h2><center>ESSO</h2>
       </div>
 <h3><ul>
@@ -58,7 +58,7 @@
 <li>Solved countless field installation issues by tracking and researching identified deficiencies</li>
   </ul></h3>
 
-  <div class="swisswatercell">
+  <div class="fieldworkcell" style="background-image: url(http://www.joel-butler.com/images/swisswater.jpg)">
     <h2><center>SWISS WATER COFFEE</h2>
       </div><h3><ul>
   <li>Reviewed project specifications and drawings to identify installation progress</li>
@@ -67,7 +67,7 @@
 <li>Produced hydrostatic testing quality control documentation for installed piping systems</li>
   <li>Handled and distributed all received client transmittals and drawings</li></ul></h3>
 
-  <div class="bchydrocell">
+  <div class="fieldworkcell" style="background-image: url(http://www.joel-butler.com/images/strathcona.jpg)">
   <h2><center>BC HYDRO</h2>
       </div><h3><ul>
 <li>Developed a risk management plan for the Strathcona Dam improvement project</li>
@@ -75,7 +75,7 @@
 <li>Prepared an environmental protection plan and traffic control plan for the project</li>
 <li>Assisted in the design of various installation systems </li>
   </ul></h3>
-  <div class="pctcell">
+  <div class="fieldworkcell" style="background-image: url(http://www.joel-butler.com/images/pct.JPG)">
   <h2><center>PACIFIC COAST TERMINALS</h2>
     </div><h3><ul>
 <li>Documented, managed, and tracked all hourly employee time</li>
