--- a/projects/adventure/brunswick.html
+++ b/projects/adventure/brunswick.html
@@ -29,11 +29,12 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Adventure</h1><hr>
-	<div class="brunswickcell">
-          <a href="brunswick"><h3><center>Mt.Brunswick</h3></a></div>
-         <br><hr><h1>Recent Project</h1><hr>
-         <h1>Origami Koi</h1>
+<h1>Mt.Brunswick</h1>
+		<h3>After a stint of poor winter weather, Alexandra and i decided to take advantage of the first sunny weekend we have had in a while. Brunswick mountain is the highest mountain in the north shore range with the summit sitting at 1788 meters. Since the trail head starts down in lions bay close to sea level, that means we climbed about 1550 meters over the 7.3 kilometers to the summit. This was a challenging hike - the entire hike in particular. The last 300 meters climb some loose shale type rocks with some grade 3 scrambling mixed in.</h3>
+          <a href="http://www.joel-butler.com/images/scramble.JPG"><img  src="http://www.joel-butler.com/images/scramble.JPG" style="width:70%" ></a><h3>
+          At the false summit, there is a very exposed ridge that must be crossed to reach the true summit of the mountain. Alex and i pushed through a few sections of the exposed scramble to an emergency helicopter pad where we sat and enjoyed lunch. We spent some time taking in the view. Im not going to try to describe it to you since there is no way i can do it justice.</h3>
+ <a href="http://www.joel-butler.com/images/brunswick.jpg"><img  src="http://www.joel-butler.com/images/brunswick.jpg" style="width:70%" ></a>
+<h3>If you give this hike a go, make sure you check the trail conditions. Some portions were overgrown and this hike can become dangerous quickly if there is rain, snow, or fog. Also, keep in mind 1550 meters is quite a few - It took us about 7 hours to return to the vehicle.</h3>
         </div>
     </div>
   </section>
