--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Contact Joel Butler</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Personal Website">
+  <meta name="description" content="Contact - Joel Butler">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
@@ -32,39 +32,16 @@
 	      <h1>Contact Me</h1>
         <hr>
         <br>
-        <h2><center> Fill out the form below to contact me!</center></h2>
-        <br>
-        <div class="formcontainer">
-      <div class="contactform">
-      <div class="row body">
-      <form name="contactform" method="get" action="sendmessage.php">
-        <fieldset>
-            <h3>
-              <label>Your name *</label>
-              <input name="name" type="text" id="name"/>
-            </h3>
-            <h3>
-              <label>Email * </label>
-              <input name="email" type="text" id="email"/>
-            </h3>
-            <h3>
-            <label>Comments *</label>
-            <textarea cols="46" rows="8" name="message" id="message"></textarea>
-            </h3>
-              <!-- The following field is for robots only, invisible to humans: -->
-               <p class="robotic" id="pot">
-                <label>If you're human leave this blank:</label>
-                <input name="robotest" type="text" id="robotest" class="robotest" />
-            </p>
-            <h3><center>
-            <input type="submit" value="Send Message" class="btn submit"/>
-          </center></h3>
-        </fieldset>
-      </form>    
-        <br>
-        <br>
-        <h3><center> If that doesnt work for you, send me an email.</h3>
-        <a href="mailto:joel.c.butler@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
+        <h2><center>You can reach me by email:</center></h2>
+        <a href="mailto:joel.c.butler@gmail.com"><i class="fa fa-envelope-o fa-4x"></i></a>
+        <h2><center>Joel.c.Butler@gmail.com</center></h2>
+       <br>
+<h2><center>Or, checkout my social media pages!</h2>
+          <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i><a href="http://youtube.com/"><i class="fa fa-youtube-square fa-4x"></i></a> <a href="https://ca.linkedin.com/in/joel-butler-2a0b9ab2"><i class="fa fa-linkedin-square fa-4x"></i></a><a href="https://www.facebook.com/JoelCWButler"><i class="fa fa-facebook-square fa-4x"></i></a> 
+            <br>
+            <br>
+            <hr>
+            <br>
        </div>
           </div>
     </div>
