--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           <h2> Learn some things about me! </h2>
         <h3> My name is Joel Butler. I am a third year Mechanical Engineering student studying at the university of Victoria. 
         I work full-time as Project Coordinator on various industrial installation projects.</h3>
-          <h3> In my spare time I enjoy challenging myself mentally and physically. Learning, making, reading, adventuring, climbing, and hiking are just a few of the activities i use to challenge myself.</h3>
+          <h3> In my spare time I enjoy challenging myself mentally and physically. Learning, making, reading, adventuring, climbing, and hiking are just a few of the activities I use to challenge myself.</h3>
         <h2> About this site! </h2>
         <h3> I am not a graphic designer... I am not a webdeveloper... I am not a writer...</h3>
         <h3> That being said, all of the HTML, CSS, and Javascript code for this website has been written by me! 
