--- a/projects/art/index.html
+++ b/projects/art/index.html
@@ -29,8 +29,23 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>ART</h1><hr>
-		<h3>I dont see myself posting too many art projects, but when i do post the odd one, i will add it here.</h3>
+        <h1>Art</h1><hr>
+		        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/brunswick.jpg)">
+          <a href="origamikoi"><h3><center>Origami Koi</h3></a></div>
+        
+         <br><hr><h1>Recent Art Project</h1><hr>
+         <h1>Origami Koi</h1>
+		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
+		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
+		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
+            	<h3>As a child, my sister and I folded countless paper cranes. She even folded around 2000 miniature cranes as some sort of 
+            	sick twisted mural art project. Each crane takes about a minute to fold. In any case, I absolutely had to try my hands  
+		at this a koi fish! How hard could it be? </h3>
+            	<a href="../files/dollarkoifish.pdf"><img style="float: left; margin: 0px 25px 0px 0px;" src="../images/koiinstructions.JPG" width="160" height="160"></a>
+           	<h3>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
+		There two distinct moments where I was close to ripping the dollar into a million pieces. Once during steps 15 through 30 which involved
+		45 minutes or so of pre-folding. And once again during step 38 because how am I supposed to understand what’s happening there?! </h3>
+        </div>
         </div>
     </div>
   </section>
