--- a/projects/art/index.html
+++ b/projects/art/index.html
@@ -30,7 +30,7 @@
 	<div class="inner">
       <div class="content">
         <h1>Art</h1><hr>
-		        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/brunswick.jpg)">
+		        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/Koi.JPG)">
           <a href="origamikoi"><h3><center>Origami Koi</h3></a></div>
         
          <br><hr><h1>Recent Art Project</h1><hr>
