--- a/projects/adventure/index.html
+++ b/projects/adventure/index.html
@@ -31,7 +31,12 @@
       <div class="content">
         <h1>Adventure</h1><hr>
 		        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/brunswick.jpg)">
-          <a href="brunswick"><h3><center>Mt.Brunswick</h3></a></div>
+          <a href="brunswick">
+            <h3><center>Mt.Brunswick</h3></a></div>
+                   <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/garibaldilake.jpg)">
+          <a href="garibaldilake">
+            <h3><center>Garibaldi Lake</h3></a></div>
+        
         
          <br><hr><h1>Recent Adventure</h1><hr>
          <h1>Mt.Brunswick</h1>
