--- a/skills/htmlcss.html
+++ b/skills/htmlcss.html
@@ -32,8 +32,10 @@
 	      <h1>HTML/CSS</h1>
         <hr><br>
         <h2>PERSONAL WEBSITE</h2>
-<h3>This is my first attempt at HTML and CSS. Prior to this website, i had zero experience! HTML, CSS and JavaScript are all a large work in progress for me; however I have been thoroughly enjoying learning another new skill. Especially one I believe will be invaluable to me in the future.</h3>
-        <h3>Some skills i learned while building this website:</h3>
+<h3>This is my first attempt at HTML and CSS. Prior to this website, I had zero experience! 
+HTML, CSS and JavaScript are all a large work in progress for me; however I have been thoroughly enjoying 
+learning another new skill. Especially one I believe will be valuable to me in the future.</h3>
+        <h3>Some skills I learned while building this website:</h3>
         <h3><ul>
           <li>Plan and build CSS webpage layouts</li>
           <li>Style pages and text using CSS and HTML</li>
@@ -42,10 +44,16 @@
           <li>Position images and website links</li>
           </ul>
        
-<h3>Luckily, I had some basic knowledge of C, C++ and Arduino programming prior to starting this project. These skills helped me understand the code i was reading in books, and in online tutorials.</h3>
+<h3>Luckily, I had some basic knowledge of C, C++ and Arduino programming prior to starting this project. 
+These skills helped me understand the code I was reading in books, and in online tutorials.</h3>
         
-<h3>I started from the ground up with a simple background image and some overlaid text. From there, I added a fixed top navigation bar which is responsive based on what page is selected. A website footer was finished next. From here, I began building individual pages from the visions I had on paper. I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it.</h3>
-<h3>I used free graphic design software called InkScape to create a vector image. This allowed me to make a white background with see through text for my home page. I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project.</h3> 
+<h3>I started from the ground up with a simple background image and some overlaid text. 
+From there, I added a fixed top navigation bar which is responsive based on what page is selected. 
+A website footer was finished next. From here, I began building individual pages from the visions I had on paper. 
+I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it.</h3>
+<h3>I used free graphic design software called InkScape to create a vector image. 
+This allowed me to make a white background with see through text for my home page. 
+I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project.</h3> 
 <h3>I also learned how to use images to link to various pages such as Instagram, and email. Furthermore, these links can also direct a user to child pages on my website.</h3>
 <h3>For my “skills” page, I learned how to create tables and size images to suit. The major challenge with this was formatting the page for various window sizes. It was challenging to create responsive images that resize themselves based on the size of the device used.</h3>
 <h3>By this point I didn’t really even have any “content” on my website and I was really thinking that creating my own website on WordPress would be much less of a pain. However, solving problems absorbs me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works. Success! Sure enough, solving small problem after small problem creates something complex and attractive. </h3>
