--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Contact Joel Butler</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Contact - Joel Butler">
+  <meta name="description" content="Contact Joel Butler">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
