--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Website</title>
+  <title>Joel Butler - Personal Website - Homepage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Personal Website">
+  <meta name="description" content="Personal Website - Homepage">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
