--- a/skills/arduino.html
+++ b/skills/arduino.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Skills - Arduino</title>
+  <title>Joel Butler - Arduino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="description" content="Joel Butler Arduino Skills">
   <meta name="author" content="Joel Butler">
