--- a/projects/adventure/garibaldilake.html
+++ b/projects/adventure/garibaldilake.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Joel Butler - Adventure - Garibaldi Lake</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Projects">
+  <meta name="description" content="Joel Butler Adventure Garibaldi Lake">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="../../style.css">
