--- a/projects/art/index.html
+++ b/projects/art/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Projects</title>
+  <title>Joel Butler - Art Projects</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Projects">
+  <meta name="description" content="Joel Butler Art Projects">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="../../style.css">
