--- a/projects/art/origamikoi.html
+++ b/projects/art/origamikoi.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Projects - Origami Koi Fish</title>
+  <title>Joel Butler - Origami Koi Fish</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Projects - Origami Koi Fish">
+  <meta name="description" content="Joel Butler Art Project Origami Koi Fish">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="../../style.css">
