--- a/projects/cooking/index.html
+++ b/projects/cooking/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Projects</title>
+  <title>Joel Butler - Cooking</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="description" content="Projects">
   <meta name="author" content="Joel Butler">
@@ -30,7 +30,7 @@
 	<div class="inner">
       <div class="content">
         <h1>Cooking</h1><hr>
-		<h3>I will upload different cooking projects here with a link to the recipe ect.</h3>
+		<h3>Though i do regularly cook new delicious meals, I haven't found the time to document recipies. I plan on posting here with the eventual goal of making a personal cook book.</h3>
         </div>
     </div>
   </section>
