--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Projects</title>
+  <title>Joel Butler - Technical Projects</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="description" content="Projects">
   <meta name="author" content="Joel Butler">
@@ -30,7 +30,7 @@
 	<div class="inner">
       <div class="content">
         <h1>Technical</h1><hr>
-	<h3> I'll post technical projects here including arduino, coding, or anything that takes a bit of technical know how.</h3>
+	<h3> I'll post technical projects here including arduino, coding, or anything that takes a bit of technical know how. First, I need to make sure i document the things I build!</h3>
         </div>
     </div>
   </section>
