--- a/skills/autocad.html
+++ b/skills/autocad.html
@@ -47,11 +47,11 @@
   A simple design made of readily available and easy to manufacture material was required. 
   The chosen design links the 16 ton body to the snatch block by means of two pins and two plates. 
   Based on the required size of the shackle pin, it is clear that the smaller pin connection is the weakest point in the design. 
-  Therefore, engineering calculations of shear stress, bearing stress, and normal stress, were carried out at this location to 
+  Therefore, engineering calculations were carried out at this location to 
   determine if the design meets the required factor of safety.</h3>
-    <a href="../images/engineeringcalculations.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/engineeringcalculations.jpg" alt="AutoCAD Engineering Calculations" width="50%" height="auto"></a>
-  <h3>
-  Engineering calculations of shear stress, normal stress, and bearing stress were carried out on the diagrams above. After confirming the lifting device met the safety requirements for the project, the design was sent to a professional structural engineer for final approval and stamping.</h3>
+    <center><a href="../images/lifting.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/Device.JPG" alt="Lifting Apparatus" width="50%" height="auto"></a></center>
+  <h3> Drawings were stamped and approved by a professional structural engineer and the apparatus was implemented successfully completing over fifty lifts safely. 
+        </h3>
 <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
