--- a/skills/autocad.html
+++ b/skills/autocad.html
@@ -49,7 +49,7 @@
   Based on the required size of the shackle pin, it is clear that the smaller pin connection is the weakest point in the design. 
   Therefore, engineering calculations were carried out at this location to 
   determine if the design meets the required factor of safety.</h3>
-    <center><a href="../images/lifting.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/Device.JPG" alt="Lifting Apparatus" width="50%" height="auto"></a></center>
+    <center><a href="../images/Device.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/Device.JPG" alt="Lifting Apparatus" width="50%" height="auto"></a></center>
   <h3> Drawings were stamped and approved by a professional structural engineer and the apparatus was implemented successfully completing over fifty lifts safely. 
         </h3>
 <br><hr><br>
