--- a/skills/htmlcss.html
+++ b/skills/htmlcss.html
@@ -48,19 +48,13 @@ learning another new skill. Especially one I believe will be valuable to me in t
 These skills helped me understand the code I was reading in books, and in online tutorials.</h3>
         
 <h3>I started from the ground up with a simple background image and some overlaid text. 
-From there, I added a fixed top navigation bar which is responsive based on what page is selected. 
-A website footer was finished next. From here, I began building individual pages from the visions I had on paper. 
-I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it.</h3>
-<h3>I used free graphic design software called InkScape to create a vector image. 
-This allowed me to make a white background with see through text for my home page. 
-I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project.</h3> 
-<h3>I also learned how to use images to link to various pages such as Instagram, and email. Furthermore, these links can also direct a user to child pages on my website.</h3>
-<h3>For my “skills” page, I learned how to create tables and size images to suit. The major challenge with this was formatting the page for various window sizes. It was challenging to create responsive images that resize themselves based on the size of the device used.</h3>
-<h3>By this point I didn’t really even have any “content” on my website and I was really thinking that creating my own website on WordPress would be much less of a pain. However, solving problems absorbs me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works. Success! Sure enough, solving small problem after small problem creates something complex and attractive. </h3>
-<h3>I learned how to create a form for collecting visitor information. The problem with this is, that for the form to work correctly, it needs to have some PHP code which will send an email directly from the form. I don’t know the first thing about PHP! </h3>
-<h3>Something I learned quickly is that planning is possibly the most important part of building a website. With a solid plan, building a vision is infinitely easier.</h3>
-<h3>Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. 
-</h3>
+From there, I added a responsive fixed top navigation bar and website footer. </h3>
+<h3>I used free graphic design software called InkScape to create various vector images.</h3> 
+<h3>I also learned how to use images to link to various pages such as Instagram, and email.</h3>
+<h3>I find building “content” to be the most time consuming aspect. After planning, it takes some time to complete various pages. </h3>
+<h3>Solving design and implementation problems has been exiting. Problems absorb me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works as expected. Sure enough, solving enough small problems creates something complex and attractive. </h3>
+<h3>Something I learned quickly is that planning is likely the most important part of building a website. This is something i should always recognize when starting a new project. With a solid plan, building a vision is simple easier.</h3>
+<h3>Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. </h3>
        <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
