--- a/skills/arduino.html
+++ b/skills/arduino.html
@@ -39,13 +39,14 @@ src="https://www.youtube.com/embed/sYGQEmTzvks">
 </iframe>
         
 <h3>The electrical components for this project include: Arduino UNO, GRBL shield, two stepper motor drivers, two stepper motors, and a power supply. The open source <a href="https://github.com/grbl/grbl">GRBL </a> g-code-parser was programmed onto the Arduino microcontroller.This GRBL program sends G-Code instructions to the stepper motors.</h3>
-<h3>Two small couplings were used to connect the stepper motors to the etch-a-sketch mechanially. Furthermore, the etch-a-sketch is held in place wood with the two stepper motors positioned concentrically over the turn knobs.</h3>
+<h3>Two small couplings were used to connect the stepper motors to the etch-a-sketch mechanially. Furthermore, the etch-a-sketch is held in place by wood with the two stepper motors positioned concentrically over the turn knobs.</h3>
 <h3>At this point, I punched some G-Code into the GRBL interpreter and off it went! This was pretty exciting. Though this project doesn’t sound very complex, there was many small obstacles I had to overcome to get to this point so needless to say, I was thrilled.</h3>
 <a href="../images/Stormtrooper.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/Stormtrooper.JPG" alt="Storm Trooper Etch-a-sketch Drawing" width="80%" height="auto"></a>       
 <h3>While searching for basic G-code software, I stumbled upon InkScape which is an open source graphic design software. This is an extremely powerful tool that can be used to create very complex vector images. It also has various G-Code tools which can create paths based on the vector image.</h3> 
 <h3>Stencils worked best for this project so I chose some basic black and white images from the internet. The image is traced and you are left with a simple outline of the design. Using the InkScape tools, some G-Code can be generated and then its ready to print. The G-Code is modified for the Arduino and sent to the stepper motors.</h3>
 <h3>This is the crappiest printer I have ever seen. It’s slow, loud, and inaccurate. But, it was so funny to see it rip away on the etch-a-sketch. The knobs and design of the etch-a-sketch create some backlash issues reducing the quality, but it’s very cool none the less. </h3>
-<h3>The limitations seem to be the way the tool path is created. Because the z-axis is non existant, the tool cannot move smoothly to a new starting position. So lines are sometimes drawn across the entire image. I’m sure if I dumped a lot of time into creating a single line vector, that I could produce some amazing results, however for now, I'm satisfied with the results.  In the future, I plan to use what I have learned with this project to build a more complex, more precise, 3D CNC milling machine.
+<h3>Additional limitations include the creation of the tool path. Because the z-axis is non-existant, the tool cannot move smoothly to a new starting position. So lines are sometimes drawn across the entire image. </h3>
+	   <h3>In the future, I plan to use what I have learned with this project to build a more complex, more precise, 3D CNC milling machine.
 </h3><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
