--- a/skills/drawing.html
+++ b/skills/drawing.html
@@ -32,7 +32,7 @@
 	      <h1>Drawing</h1>
         <hr><br>
         <h3>I don’t spend too much time drawing, but it’s a cool skill none the less. My sister is a professional tattoo artist and 
-        growing up alongside her, I was exposed to a ton of drawings, painting, and art in 
+        growing up next to her, I was exposed to a ton of drawing, painting, and art in 
         general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a> <h3>I 
         believe I learned from watching her? Make sure you check out her website <a href="http://darcilove.com">www.darcilove.com</a>. 
         I don't actually really know much of anything about drawing technique. Either way, this skill 
