--- a/skills/drawing.html
+++ b/skills/drawing.html
@@ -33,10 +33,9 @@
         <hr><br>
         <h3>I don’t spend too much time drawing, but it’s a cool skill none the less. My sister is a professional tattoo artist and 
         growing up next to her, I was exposed to a ton of drawing, painting, and art in 
-        general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a> <h3>I 
-        believe I learned from watching her? Make sure you check out her website <a href="http://darcilove.com">www.darcilove.com</a>. 
-        I don't actually really know much of anything about drawing technique. Either way, this skill 
-        really helps me when drawing in AutoCAD, Solidworks, hand sketching ideas, and Pictionary.</h3>
+        general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a> 
+        I don't actually really know much of about drawing technique. Either way, this skill 
+        really helps me when drawing in AutoCAD, Solidworks, and while hand sketching ideas.</h3>
 <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
