--- a/skills/drawing.html
+++ b/skills/drawing.html
@@ -33,7 +33,7 @@
         <hr><br>
         <h3>I don’t spend too much time drawing, but it’s a cool skill none the less. My sister is a professional tattoo artist and 
         growing up next to her, I was exposed to a ton of drawing, painting, and art in 
-        general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a> 
+        general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="Chameleon Drawing" width="80%" height="auto"></a> 
         I don't actually really know much of about drawing technique. Either way, this skill 
         really helps me when drawing in AutoCAD, Solidworks, and while hand sketching ideas.</h3>
 <br><hr><br>
