--- a/skills/woodwork.html
+++ b/skills/woodwork.html
@@ -32,17 +32,16 @@
 	      <h1>Woodwork</h1>
         <hr><br>
         <h2>DESK</h2>
-<h3>I wanted a personal work station where I could study, do homework, surf the internet, play xbox, and house my electronics, but, I couldn’t find anything I really liked in any stores. So, I opted to build my own.</h3>
-<h3>After I sketched up a tall and spacious desk on paper, I started cutting some birch plywood and maple. It’s a fairly simple design but has removable adjustable shelves, an open back for ventilation, and a ton of additional support.</h3>
-<h3>Birch plywood and solid maple were the two basic materials I used for the project. Basically, the plywood was used for the top, sides, shelves and inner support, and the maple was used for the corners, edges and feet.</h3>
+<h3>I wanted a space where I could study, surf the internet, house my electronics and play games, but, I couldn’t find anything I really liked in any stores. So, I opted to build my own.</h3>
+<h3>After I completed the design on paper, I started cutting some birch plywood and maple. It’s a fairly simple design but has removable, adjustable shelves, an open back for ventilation, and additional support.</h3>
+<h3>Birch plywood and solid maple were the two basic materials I used for the project.</h3>
 <h3>I used a table saw, miter saw, nail gun, and planer to work on this project. Finally, I stained and sealed the desk so that it would stand up to some abuse. It took quite a while to put this together but I have always been very happy with the results.</h3>
-
+<a href="../images/Desk.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/Desk.JPG" alt="Wooden Desk" width="80%" height="auto"></a>
 <h2>WOODEN CLOCK<h2>
-<h3>I have had an interest in watches for quite some time. I bought my first in 2006 and still wear it frequently. My collection has now grown to 10 unique watches. I also think that mechanical clocks are really neat. This is where this project started for me. </h3>
-<h3>I’m not sure how I found it, but I stumbled upon a mechanical engineer who makes wooden mechanical clocks. All of the inner components are made of wood. They are really cool pieces of art that take a lot of patience, and precision to build.</h3>
-<h3>Eventually, i'd like to design my own and hopefully, everything will link together. I would like to design and build my own wooden clocks using solidworks. To acomplish building my own designs, i'd like to build a CNC machine with the experience i have gained from my arduino project. The CNC machine will allow me to precisely cut components.</h3> 
-<h3>For now, I purchased a cheap scroll saw from craigslist and started cutting out gears by hand. It’s a very tedious process, but also very relaxing. Hopefully when I’m done, this clock will tick away loudly. There are some incredibly intricate wooden mechanical designs that even strike on the hour.
-</h3>
+<h3>I have had an interest in watches for quite some time. I bought my first in 2006 and still wear it frequently. I also think that mechanical clocks are really neat. This is where this project started for me. </h3>
+<h3>To see if this was something I would enjoy, I began researching wooden clocks. Mechanical clocks are interesting works of art that take patience, and precision to build.</h3>
+<h3>Eventually, i'd like to design my own. The CNC skills I have gained will hopefully link everything together nicely.</h3> 
+<h3>For now, I purchased a cheap scroll saw from craigslist and started cutting out gears by hand. It’s a very tedious process, but also very relaxing. Hopefully when i’m done, this clock will tick away loudly.</h3>
 <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
