--- a/skills/index.html
+++ b/skills/index.html
@@ -18,7 +18,7 @@
         <li class="contact"><a href="../contact">Contact</a></li>
         <li class="about"><a href="../about">About</a></li>
         <li class="projects"><a href="../projects">Projects</a></li>
-        <li class="skills"><a class="active" href="/">Skills</a></li>
+        <li class="skills"><a class="active" href="../skills">Skills</a></li>
         <li class="home"><a href="../">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
             <i class="fa fa-server fa-lg"></i></a><li>
