--- a/projects/index.html
+++ b/projects/index.html
@@ -34,10 +34,10 @@
           <a href="adventure"><h3><center>Adventure</h3></a></div>
         <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/chameleon.jpg)">
            <a href="art"><h3><center>Art</h3></a></div>
-       <!--<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/cooking.jpg)">
-            <a href="cooking"><h3><center>Cooking</h3></a></div>-
-	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/technical.JPG)">
-            <a href="technical"><h3><center>Technical</h3></a></div>-->
+      <!--<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/cooking.jpg)">
+            <a href="cooking"><h3><center>Cooking</h3></a></div>-->
+	 <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/technical.JPG)">
+            <a href="technical"><h3><center>Technical</h3></a></div>
          <br><hr><h1>Recent Project</h1><hr>
          <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
