--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -29,8 +29,13 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Technical</h1><hr>
-	<h3> I'll post technical projects here including arduino, coding, or anything that takes a bit of technical know how. First, I need to make sure i document the things I build!</h3>
+        <h1>Adventure</h1><hr>
+	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/gearbox.jpg)"><a href="gearbox">
+            <h3><center>Gearbox Design</h3></a></div>
+				
+         <br><hr><h1>Recent Technical Project</h1><hr>
+         <h1>Gearbox Design</h1>
+			   <h3> Recent Project content </h3>
         </div>
     </div>
   </section>
