--- a/projects/technical/gearbox.html
+++ b/projects/technical/gearbox.html
@@ -30,11 +30,23 @@
 	<div class="inner">
       <div class="content">
 <h1>Gearbox Design</h1><hr>
-
-		<h3> Gearbox content goes here!</h3>
-          
+Even though this was a university project, it still produced amazing results. During mechanical design, student teams were required to
+	    	design a complete mid-drive gearbox for an electric powered bicycle. This project included extensive design work.
+	      <h3> Even though this was a university project, it still produced amazing results. </h3>
+ <!--<a href="http://www.joel-butler.com/images/scramble.JPG"><img  src="http://www.joel-butler.com/images/scramble.JPG" style="width:70%" ></a>-->
+			<h3>During mechanical design, student teams were required to design a complete mid-drive gearbox for an electric powered bicycle. 
+			This project included extensive design work. The final report included fully detailed drawings for all shafts,
+			in addition to a standard cutaway drawings showing the assembly of the gearbox. The report also included all the
+			cumulative design details worked on throughout the project to form a complete engineering report. </h3>
     <!--<a href="http://www.joel-butler.com/images/scramble.JPG"><img  src="http://www.joel-butler.com/images/scramble.JPG" style="width:70%" ></a>-->
-         
+      <h3>Detailed design for gears utilized the AGMA methods for analysis of bending and surface fatigue. Furthermore, all critical failure 
+			locations on shafts for fatigue failure are analyzed using the stress-life method in conjunction with Miner’s 
+			damage rule. Detailed design drawings for shafts were generated including details of shoulders, chamfers, keyways,
+			diameters, grooves, threads, etc. Bearings are selected and analyzed using the SKF on-line catalogue. 
+			Although only critical fasteners were analyzed. The overall excel tool sheet used to quickly iterate through
+	      design changes is quite extensive.
+</h3>
+			
     <h3> A picture or two, and some more gearbox content here!</h3>
     </div>
     </div>
