--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -29,10 +29,11 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Adventure</h1><hr>
+        <h1>Technical</h1><hr>
 	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/gearbox.jpg)"><a href="gearbox">
             <h3><center>Gearbox Design</h3></a></div>
-				
+	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/heattransfer.jpg)"><a href="heattransfer">
+		<h3><center>Heat Transfer Model</h3></a></div>		
          <br><hr><h1>Recent Technical Project</h1><hr>
          <h1>Gearbox Design</h1>
 			   <h3> Recent Project content </h3>
