--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -32,7 +32,7 @@
         <h1>Technical</h1><hr>
 	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/gearbox.jpg)"><a href="gearbox">
             <h3><center>Gearbox Design</h3></a></div>
-	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/heattransfer.jpg)"><a href="heattransfer">
+	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/heattransfer.JPG)"><a href="heattransfer">
 		<h3><center>Heat Transfer Model</h3></a></div>		
          <br><hr><h1>Recent Technical Project</h1><hr>
          <h1>Gearbox Design</h1>
