--- a/projects/technical/heattransfer.html
+++ b/projects/technical/heattransfer.html
@@ -31,7 +31,7 @@
       <div class="content">
 <h1>Gearbox Design</h1><hr>
 	<h3>Talk about heat transfer model briefly </h3>
-    <!--<a href="http://www.joel-butler.com/images/heattransfer.JPG"><img  src="http://www.joel-butler.com/images/heattransfer.JPG" style="width:70%" ></a>-->
+    <a href="http://www.joel-butler.com/images/heattransfer.JPG"><img  src="http://www.joel-butler.com/images/heattransfer.JPG" style="width:70%" ></a>
       <h3>Maybe talk a little more. </h3>
     </div>
     </div>
