--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -30,7 +30,7 @@
 	<div class="inner">
       <div class="content">
         <h1>Technical</h1><hr>
-	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/gearbox.jpg)"><a href="gearbox">
+	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/gearbox.JPG)"><a href="gearbox">
             <h3><center>Gearbox Design</h3></a></div>
 	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/heattransfer.JPG)"><a href="heattransfer">
 		<h3><center>Heat Transfer Model</h3></a></div>		
