--- a/projects/technical/gearbox.html
+++ b/projects/technical/gearbox.html
@@ -36,7 +36,7 @@
 			This project included extensive design work. The final report included fully detailed drawings for all shafts,
 			in addition to a standard cutaway drawings showing the assembly of the gearbox. The report also included all the
 			cumulative design details worked on throughout the project to form a complete engineering report. </h3>
-    <a href="http://www.joel-butler.com/images/scramble.JPG"><img  src="http://www.joel-butler.com/images/gearbox.JPG" style="width:70%" ></a>
+    <a href="http://www.joel-butler.com/images/gearbox.JPG"><img  src="http://www.joel-butler.com/images/gearbox.JPG" style="width:70%" ></a>
       <h3>Detailed design for gears utilized the AGMA methods for analysis of bending and surface fatigue. Furthermore, all critical failure 
 			locations on shafts for fatigue failure are analyzed using the stress-life method in conjunction with Miner’s 
 			damage rule. Detailed design drawings for shafts were generated including details of shoulders, chamfers, keyways,
