--- a/projects/technical/heattransfer.html
+++ b/projects/technical/heattransfer.html
@@ -30,9 +30,11 @@
 	<div class="inner">
       <div class="content">
 <h1>Heat Transfer Model</h1><hr>
-	<h3>Talk about heat transfer model briefly </h3>
+	<h3>This is one of the most entertaining assignments i completed in third year engineering. This heat transfer model uses numerical methods to predict how heat is transfered through a material. 
+		These methods can be quickly modified to investigate many different shapes.
+	    Each nodal temperature is calculated using the information from each surrounding node. </h3>
     <a href="http://www.joel-butler.com/images/heattransfer.JPG"><img  src="http://www.joel-butler.com/images/heattransfer.JPG" style="width:70%" ></a>
-      <h3>Maybe talk a little more. </h3>
+      <h3>This model can also be used to visualize how heat flows. For example, if the internal temperature of the tubes (red squares) is removed, the iterative calculation helps to visualize how a change in temperature will cause the heat to flow. </h3>
     </div>
     </div>
   </section>
