--- a/projects/index.html
+++ b/projects/index.html
@@ -32,8 +32,8 @@
 	      <h1>Projects</h1><hr>
         <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/adventure.jpg)">
           <a href="adventure"><h3><center>Adventure</h3></a></div>
-        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/chameleon.jpg)">
-           <a href="art"><h3><center>Art</h3></a></div>
+       <!--<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/chameleon.jpg)">
+           <a href="art"><h3><center>Art</h3></a></div>-->
       <!--<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/cooking.jpg)">
             <a href="cooking"><h3><center>Cooking</h3></a></div>-->
 	 <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/technical.JPG)">
