--- a/projects/index.html
+++ b/projects/index.html
@@ -39,17 +39,21 @@
 	 <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/technical.JPG)">
             <a href="technical"><h3><center>Technical</h3></a></div>
          <br><hr><h1>Recent Project</h1><hr>
-         <h1>Origami Koi</h1>
-		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
-		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
-		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
-            	<h3>As a child, my sister and I folded countless paper cranes. She even folded around 2000 miniature cranes as some sort of 
-            	sick twisted mural art project. Each crane takes about a minute to fold. In any case, I absolutely had to try my hands  
-		at this a koi fish! How hard could it be? </h3>
-            	<a href="../files/dollarkoifish.pdf"><img style="float: left; margin: 0px 25px 0px 0px;" src="../images/koiinstructions.JPG" width="160" height="160"></a>
-           	<h3>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
-		There two distinct moments where I was close to ripping the dollar into a million pieces. Once during steps 15 through 30 which involved
-		45 minutes or so of pre-folding. And once again during step 38 because how am I supposed to understand what’s happening there?! </h3><br>
+        <h1>Gearbox Design</h1><hr>
+	      <h3> This university project produced amazing results! I won't get too deep into any technical details as i could go on for hours.<h3>
+		      
+		      <h3>During mechanical design, student teams were required to design a complete mid-drive gearbox for an electric powered bicycle. 
+			This project included extensive design work. The final report included fully detailed drawings for all shafts,
+			in addition to a standard cutaway drawings showing the assembly of the gearbox. The report also included all the
+			cumulative design details worked on throughout the project to form a complete engineering report. </h3>
+    <a href="http://www.joel-butler.com/images/gearbox.JPG"><img  src="http://www.joel-butler.com/images/gearbox.JPG" style="width:70%" ></a>
+      <h3>Detailed design for gears utilized the AGMA methods for analysis of bending and surface fatigue. Furthermore, all critical failure 
+			locations on shafts for fatigue failure are analyzed using the stress-life method in conjunction with Miner’s 
+			damage rule. Detailed design drawings for shafts were generated including details of shoulders, chamfers, keyways,
+			diameters, grooves, threads, etc. Bearings are selected and analyzed using the SKF on-line catalogue. 
+			Although only critical fasteners were analyzed. The overall excel tool sheet used to quickly iterate through
+	      design changes is quite extensive.
+</h3><br>
        <hr>
       <h3><center>Resume available upon request</h3>
         <br><br>
