--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -37,6 +37,12 @@
          <br><hr><h1>Recent Technical Project</h1><hr>
          <h1>Gearbox Design</h1>
 			   <h3> Recent Project content </h3>
+		<h1>Heat Transfer Model</h1><hr>
+	<h3>This is one of the most entertaining assignments i completed in third year engineering. This heat transfer model uses numerical methods to predict how heat is transfered through a material. 
+		These methods can be quickly modified to investigate many different shapes.
+	    Each nodal temperature is calculated using the information from each surrounding node. </h3>
+    <a href="http://www.joel-butler.com/images/heattransfer.JPG"><img  src="http://www.joel-butler.com/images/heattransfer.JPG" style="width:70%" ></a>
+      <h3>This model can also be used to visualize how heat flows. For example, if the internal temperature of the tubes (red squares) is removed, the iterative calculation helps to visualize how a change in temperature will cause the heat to flow. </h3><br>
         </div>
     </div>
   </section>
