--- a/projects/technical/index.html
+++ b/projects/technical/index.html
@@ -41,7 +41,10 @@
 	    Each nodal temperature is calculated using the information from each surrounding node. </h3>
     <a href="http://www.joel-butler.com/images/heattransfer.JPG"><img  src="http://www.joel-butler.com/images/heattransfer.JPG" style="width:70%" ></a>
       <h3>This model can also be used to visualize how heat flows. For example, if the internal temperature of the tubes (red squares) is removed, the iterative calculation helps to visualize how a change in temperature will cause the heat to flow. </h3><br>
-        </div>
+               <hr>
+      <h3><center>Resume available upon request</h3>
+        <br><br>
+		</div>
     </div>
   </section>
        
