--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	      <h1><center>MECHANICAL ENGINEERING STUDENT</center></h1>
 	      <hr>
 	      <br>
-          <h3><center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria.</h2>
+          <h3><center>I'm a 4th year Mechanical Engineering Student attending the University of Victoria.</h2>
           <h3> <center>I like solving problems and making my ideas come to life.</center></h2>
 	      <h3><center>I am not a graphic designer. This website is a learning experience. 
            However, all of the HTML, CSS, and Javascript code has been written by yours truly. 
