--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 	      <h1>About</h1>
 	      <hr><br>
           <h2> Learn some things about me! </h2>
-        <h3> My name is Joel Butler. I am a third year Mechanical Engineering student studying at the university of Victoria. 
+        <h3> My name is Joel Butler. I am a fourth year Mechanical Engineering student studying at the university of Victoria. 
         I have most recently worked full-time as Project Coordinator on various industrial installation projects. Now, I study 70 hours per week!</h3>
           <h3> In my spare time I enjoy challenging myself mentally and physically. Learning, making, reading, adventuring, climbing, and hiking are just a few of the activities I use to challenge myself.</h3>
         <h2> About this site! </h2>
